--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 /******************************************************************
   Theme Name: Anime
@@ -36,7 +36,7 @@
 html,
 body {
   height: 100%;
-  font-family: "Mulish", sans-serif;
+  font-family: 'Mulish', sans-serif;
   -webkit-font-smoothing: antialiased;
   background: #0b0c2a;
   color: white;
@@ -51,7 +51,7 @@ h5,
 h6 {
   margin: 0;
   font-weight: 400;
-  font-family: "Mulish", sans-serif;
+  font-family: 'Mulish', sans-serif;
 }
 
 h1 {
@@ -80,7 +80,7 @@ h6 {
 
 p {
   font-size: 15px;
-  font-family: "Mulish", sans-serif;
+  font-family: 'Mulish', sans-serif;
   font-weight: 400;
   line-height: 25px;
   margin: 0 0 15px 0;
@@ -126,7 +126,7 @@ ol {
   text-transform: uppercase;
   padding-left: 20px;
   position: relative;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 .section-title h4:after,
@@ -137,7 +137,7 @@ ol {
   height: 32px;
   width: 4px;
   background: #e53637;
-  content: "";
+  content: '';
 }
 
 .set-bg {
@@ -473,7 +473,7 @@ ol {
 .hero__text h2 {
   color: #ffffff;
   font-size: 42px;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   line-height: 52px;
   margin-top: 35px;
@@ -605,7 +605,7 @@ ol {
   height: 54px;
   width: 54px;
   background: rgba(255, 255, 255, 0.1);
-  content: "";
+  content: '';
   z-index: -1;
   margin: 0 auto;
 }
@@ -722,7 +722,7 @@ ol {
 .product__sidebar .section-title h5 {
   color: #ffffff;
   font-weight: 600;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   line-height: 21px;
   text-transform: uppercase;
   padding-left: 20px;
@@ -736,7 +736,7 @@ ol {
   height: 32px;
   width: 4px;
   background: #e53637;
-  content: "";
+  content: '';
 }
 
 .product__sidebar__view {
@@ -1053,7 +1053,7 @@ ol {
   height: 6px;
   width: 6px;
   background: #b7b7b7;
-  content: "";
+  content: '';
 }
 
 .anime__details__widget ul li span {
@@ -1118,7 +1118,7 @@ ol {
   top: 15px;
   border-top: 15px solid transparent;
   border-left: 15px solid #1d1e39;
-  content: "";
+  content: '';
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
@@ -1204,7 +1204,7 @@ ol {
 
 .anime__video__player .plyr--video .plyr__control.plyr__tab-focus,
 .anime__video__player .plyr--video .plyr__control:hover,
-.anime__video__player .plyr--video .plyr__control[aria-expanded="true"] {
+.anime__video__player .plyr--video .plyr__control[aria-expanded='true'] {
   background: transparent;
 }
 
@@ -1216,7 +1216,7 @@ ol {
   color: transparent;
 }
 
-.anime__video__player .plyr--full-ui input[type="range"] {
+.anime__video__player .plyr--full-ui input[type='range'] {
   color: #ffffff;
 }
 
@@ -1319,8 +1319,8 @@ ol {
   position: absolute;
   right: -14px;
   top: 0;
-  content: "";
-  font-family: "FontAwesome";
+  content: '';
+  font-family: 'FontAwesome';
 }
 
 .breadcrumb__links span {
@@ -1349,7 +1349,7 @@ ol {
 .normal__breadcrumb__text h2 {
   color: #ffffff;
   font-size: 48px;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-weight: 700;
   margin-bottom: 22px;
 }
@@ -1739,13 +1739,13 @@ ol {
   height: 330px;
   width: 1px;
   background: rgba(255, 255, 255, 0.2);
-  content: "";
+  content: '';
 }
 
 .login__form h3 {
   color: #ffffff;
   font-weight: 700;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   margin-bottom: 30px;
 }
 
@@ -1762,7 +1762,7 @@ ol {
   height: 30px;
   width: 1px;
   background: #b7b7b7;
-  content: "";
+  content: '';
 }
 
 .login__form form .input__item input {
@@ -1824,7 +1824,7 @@ ol {
 .login__register h3 {
   color: #ffffff;
   font-weight: 700;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   margin-bottom: 30px;
 }
 
@@ -1924,7 +1924,7 @@ ol {
 .signup .login__social__links h3 {
   color: #ffffff;
   font-weight: 700;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   margin-bottom: 30px;
 }
 
@@ -2347,7 +2347,6 @@ ol {
   }
 }
 
-
 .nice-select {
   -webkit-tap-highlight-color: transparent;
   background-color: #fff;
@@ -2388,7 +2387,7 @@ ol {
 .nice-select:after {
   border-bottom: 2px solid #999;
   border-right: 2px solid #999;
-  content: "";
+  content: '';
   display: block;
   height: 5px;
   margin-top: -4px;
@@ -2472,9 +2471,12 @@ ol {
   -webkit-transform: scale(0.75) translateY(-21px);
   -ms-transform: scale(0.75) translateY(-21px);
   transform: scale(0.75) translateY(-21px);
-  -webkit-transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25),
+  -webkit-transition:
+    all 0.2s cubic-bezier(0.5, 0, 0, 1.25),
     opacity 0.15s ease-out;
-  transition: all 0.2s cubic-bezier(0.5, 0, 0, 1.25), opacity 0.15s ease-out;
+  transition:
+    all 0.2s cubic-bezier(0.5, 0, 0, 1.25),
+    opacity 0.15s ease-out;
   z-index: 9;
 }
 .nice-select .list:hover .option:not(:hover) {
